kubernetes/argo-cd/projects/aws/production-hm/kafbat-ui/environments/production/kubernetes-manifests/hm-kafbat-ui-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-kafbat-ui-ingress
  namespace: production-hm-kafbat-ui
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: kafbat-ui.hongbomiao.com
  labels:
    app.kubernetes.io/name: kafbat-ui
    app.kubernetes.io/part-of: production-hm-kafbat-ui
spec:
  rules:
    - host: kafbat-ui.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-kafbat-ui-kafka-ui
                port:
                  number: 80
  tls:
    - hosts:
        - kafbat-ui.hongbomiao.com
      secretName: hm-kafbat-ui-certificate
